2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp, src/griddata.cpp: Updated
	the grid classes to use an x, y, z index and added several new
	convenience functions using vector3 variables. Some more work is
	needed and a few extra functions to access/set grid values.

	* src/formats/gausscubeformat.cpp: Stop translating from x, y, z index
	to z, y, x as the grid classes now use the more common x, y, z index.

2008-02-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.*: Remove redundant calls to
	Compute when calculating gradients. Remove un-needed angle/oop
	code. Problem lies elsewhere.

	* doc/Makefile.am, doc/Makefile.in: Add missing man pages and html
	documentation.

	* doc/roundtrip.1: Add missing man page. (More needed for new
	tools.)

	* test/roundtrip.cpp: Fix incorrect usage statement. Thanks to
	Daniel Leidert.

	* acinclude.m4: Add Boost detection code. Still needs addition to
	configure script.

2008-02-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h, src/base.cpp: Add new GetAllData()
	function to return a vector of all OBGenericData of a given
	type. This has been long requested and is sorely
	needed. (For example, it's useful when you have multiple orbitals
	in a molecule.)

	* src/formats/gausscubeformat.cpp: Add the title of the cube as an
	attribute of the GridData.

	* tools/obprop.cpp: Update to new name of PSA descriptor.

	* configure.in, configure: Update with patch from Daniel Leidert
	for PR#1902640 and wx-config.

2008-02-25  Chris Morley

	* src/forcefield.cpp: added (double)cast to sqrt to prevent
	compiler error.
	
	* src/formats/xml/xml.cpp(XMLConversion::WriteStream): do not
	write when buffer empty. Workaround to prevent crash in CMLFormat
	which occurs when freeing libxml2 writer. I don't understand exactly
	what is happening here. I wish we had a C++ XML library!
	I hope cures bugs #1815533 and #1900480.
